# macro-recorder

./: .gitignore  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  api.ts  eventLabels.test.ts  eventLabels.ts  styles.css  timelineCommands.test.ts  timelineCommands.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  hotkeys.rs  lib.rs  macro_file.rs  main.rs  ui_commands.rs
src-tauri/src/engine/: input.rs  mod.rs  player.rs  recorder.rs  worker.rs
src-tauri/src/engine/tests/: edge_cases.rs  mod.rs  timing_tests.rs
src/components/: HotkeyConfig.tsx  MacroEditor.test.tsx  MacroEditor.tsx  MacroList.tsx  RecordBar.tsx
