[package]
name = "macro-recorder"
version = "0.1.0"
description = "High-accuracy Windows macro recorder"
authors = ["Jaymie"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "macro_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
windows-targets = "0.52"
